<resources>
    <string name="app_name">Book Quote Collector</string>

    <!-- bottom nav title -->
    <string name="collections">Collections</string>
    <string name="favorites">Favorites</string>

    <!-- top bar menu -->
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home Screen -->
    <string name="extended_fab_content_desc">Add Quote of Books Quote Collection</string>

    <!-- Add Quote Screen -->
    <string name="hint_books_title">Books Title</string>
    <string name="hint_author">Author</string>
    <string name="hint_quote">Quote</string>
    <string name="hint_quote_category">Quote Category</string>
    <string name="add_quote">Add Quote</string>
    <string name="update_quote">Update Quote</string>

    <!-- Quote Details Screen -->
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="quote">Quote:</string>
    <string name="delete">Delete</string>
    <string name="des_delete_a_quote">Delete a quote</string>
    <string name="des_edit_a_quote">Edit a quote</string>
    <string name="edit">Edit</string>
    <string name="des_favorite_a_quote">Favorite a Quote</string>
    <string name="favorite">Favorite</string>

</resources>