<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.QuoteDetails"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/text_color_day_night"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txt_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/text_color_day_night"
                android:padding="4dp"
                android:layout_marginStart="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quote"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/text_color_day_night"
                android:padding="4dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/txt_quote_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/text_color_day_night"
                android:padding="4dp"
                android:layout_marginTop="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top|end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/des_favorite_a_quote"
                android:text="@string/favorite"
                android:textAllCaps="false"
                android:src="@drawable/ic_favorite"
                android:backgroundTint="@color/grey_100"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/des_delete_a_quote"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:src="@drawable/ic_delete"
                android:backgroundTint="@color/grey_100"/>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/des_edit_a_quote"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:src="@drawable/ic_edit"
            android:backgroundTint="@color/grey_100"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>